# TriConnect

./: DEPLOY_FLY.md  DEPLOY_GCP.md  README.md  build_app.sh  build_exe.bat  deploy_to_gcp.sh  install.sh  package.json  run.sh  run_client.sh  run_frontend.sh  rust_analysis.md
.github/workflows/: deploy.yml
signaling-server/: .gitignore  package.json  server.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compression.rs  crypto.rs  file_ops.rs  hash.rs  lib.rs  main.rs  network.rs
src/css/: styles.css
src/js/: app.js  chat.js  env.js  file-transfer.js  signaling.js  ui.js  video-sync.js  voice.js  webrtc.js
