[package]
name = "triconnect"
version = "1.0.0"
edition = "2021"
description = "P2P mesh desktop app for 3 users"

[lib]
name = "triconnect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util"] }
